examples/test/testpolicy17721.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17721
  namespace: namespace152
spec:
  podSelector:
    matchLabels:
      key23: value27
      key24: value27
      key15: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value0
          key44: value9
          key41: value9
      podSelector:
        matchLabels:
          key6: value3
          key26: value38
          key29: value33
